fix(kajona_v4): kajona-overrides.less fix autocomplete white space nowrap
(cherry picked from commit 1393fd8)

--- a/module_v4skin/admin/skins/kajona_v4/less/kajona-overrides.less
+++ b/module_v4skin/admin/skins/kajona_v4/less/kajona-overrides.less
@@ -470,6 +470,7 @@ footer {
             border-radius: 0;
             color: @link-color;
             font-family: @font-family-base;
+            white-space: nowrap;
 
             &:hover {
                 text-decoration: none;
